--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: talks_development
+  database: talks_production
   pool: 5
   username: root
   password: 52b48my7a636912zci90
