--- a/config/database.yml
+++ b/config/database.yml
@@ -1,36 +1,22 @@
-# MySQL.  Versions 4.1 and 5.0 are recommended.
-#
-# Install the MySQL driver:
-#   gem install mysql2
+# SQLite version 3.x
+#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: talks_development
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: root
-  password: 52b48my7a636912zci90
-  socket: /var/lib/mysql/mysql.sock
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: talks_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: root
-  password:
-  socket: /var/lib/mysql/mysql.sock
+  timeout: 5000
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: talks_production
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
-  username: root
-  password: 52b48my7a636912zci90
-  socket: /var/lib/mysql/mysql.sock
+  timeout: 5000
