--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,36 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
+# MySQL.  Versions 4.1 and 5.0 are recommended.
+#
+# Install the MySQL driver:
+#   gem install mysql2
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: talks_development
   pool: 5
-  timeout: 5000
+  username: root
+  password: 
+  socket: /var/lib/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: talks_test
   pool: 5
-  timeout: 5000
+  username: root
+  password:
+  socket: /var/lib/mysql/mysql.sock
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: talks_production
   pool: 5
-  timeout: 5000
+  username: root
+  password: 
+  socket: /var/lib/mysql/mysql.sock
